syntax = "proto3";

package com.github.fckng0d.albumservice;

option java_multiple_files = true;
option java_package = "com.github.fckng0d.grpc.albumservice";
option java_outer_classname = "AlbumServiceProto";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

import "track_service.proto";


service AlbumService {
  rpc CreateAlbum (CreateAlbumRequest) returns (AlbumResponse);
  rpc DeleteAlbum (AlbumByIdRequest) returns (google.protobuf.Empty);

  rpc GetAlbumById(AlbumByIdRequest) returns (AlbumResponse);

  rpc GetAlbumPreviewsByMusician (MusicianNicknameRequest) returns (AlbumPreviewListResponse);
  rpc GetGuestAlbumPreviewsByMusician (MusicianNicknameRequest) returns (AlbumPreviewListResponse);

  rpc GetAllMusicians (AlbumByIdRequest) returns (AlbumMusiciansResponse);
}

message CreateAlbumRequest {
  string name = 1;
  repeated string musician_nicknames = 2;
  UploadFileRequest cover_image = 3;
  repeated com.github.fckng0d.trackservice.CreateTrackRequest tracks = 4;
}

message UploadFileRequest {
  string file_name = 1;
  bytes file_data = 2;
}

message AlbumResponse {
  string album_id = 1;
  string name = 2;
  repeated string languages = 3;
  repeated string genres = 4;
  google.protobuf.Timestamp release_date = 5;
  bool is_explicit = 6;
  bool is_available = 7;
  bool is_blocked = 8;
  int32 total_duration_seconds = 9;
  int64 audition_count = 10;
  int64 album_in_favorites_count = 11;
  string cover_image_url = 12;
  repeated com.github.fckng0d.trackservice.TrackPreviewResponse tracks = 13;
  repeated string musician_nicknames = 14;
  repeated string track_guest_nicknames = 15;
}

message AlbumPreviewResponse {
  string album_id = 1;
  string name = 2;
  string cover_image_url = 3;
  int32 release_year = 4;
  repeated string musician_nicknames = 5;
  bool is_explicit = 6;
  int64 audition_count = 7;
}

message MusicianNicknameRequest {
  string nickname = 1;
}

message AlbumPreviewListResponse {
  repeated AlbumPreviewResponse albums = 1;
}

message AlbumByIdRequest {
  string album_id = 1;
}

message AlbumMusiciansResponse {
  repeated string musician_nicknames = 1;
}